[gd_scene load_steps=20 format=3 uid="uid://dfu3r734lggit"]

[ext_resource type="Script" path="res://main.gd" id="1_35iqu"]
[ext_resource type="AudioStream" uid="uid://crixbkttrybqw" path="res://sounds/levelup_BibR50L.mp3" id="2_bkjyh"]
[ext_resource type="AudioStream" uid="uid://debiaikqf2ktx" path="res://sounds/final-fantasy-vii-victory-fanfare-1.mp3" id="3_p7k6g"]
[ext_resource type="AudioStream" uid="uid://sj2jmj1xtsiy" path="res://sounds/30h Fanfare 1.mp3" id="4_0p24g"]
[ext_resource type="AudioStream" uid="uid://h25brpf7my80" path="res://sounds/025 A Good Night's Rest.mp3" id="5_ilgp4"]
[ext_resource type="AudioStream" uid="uid://bmsuo35g70a4b" path="res://sounds/17 - Victory!.mp3" id="6_1dnwl"]
[ext_resource type="AudioStream" uid="uid://d2xycahdax21c" path="res://sounds/013 A Good Buddy.mp3" id="7_nmgmy"]
[ext_resource type="AudioStream" uid="uid://byrikwhbtmdk4" path="res://sounds/2 - Track 2.mp3" id="8_iiq54"]
[ext_resource type="AudioStream" uid="uid://plaoiwybdjh0" path="res://sounds/911 Evil Mani Mani Statue.mp3" id="9_u2nc4"]
[ext_resource type="AudioStream" uid="uid://c8vgco7muttqw" path="res://sounds/908 Spell Learned.mp3" id="10_du87c"]
[ext_resource type="AudioStream" uid="uid://jgiklo2cphsn" path="res://sounds/907 Key Item Fanfare.mp3" id="11_oia3p"]
[ext_resource type="AudioStream" uid="uid://cgt7xdepsxipp" path="res://sounds/903 Unknown Jingle 1.mp3" id="12_02hkw"]
[ext_resource type="AudioStream" uid="uid://cvjauy4ky76dc" path="res://sounds/223 Fanfare 1.mp3" id="13_57fyw"]
[ext_resource type="AudioStream" uid="uid://463iumcg5wlx" path="res://sounds/217 Victory!.mp3" id="14_dwyr2"]
[ext_resource type="AudioStream" uid="uid://cejyctpy6v1su" path="res://sounds/99 Victory.mp3" id="15_uomnd"]
[ext_resource type="AudioStream" uid="uid://xeynsthuxqyc" path="res://sounds/30j Fanfare 3.mp3" id="16_gcin8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q83sa"]
bg_color = Color(0.109804, 0.109804, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kfevw"]
bg_color = Color(1, 0.356863, 0.0901961, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8ncos"]
streams_count = 15
stream_0/stream = ExtResource("2_bkjyh")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_p7k6g")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_u2nc4")
stream_2/weight = 1.0
stream_3/stream = ExtResource("10_du87c")
stream_3/weight = 1.0
stream_4/stream = ExtResource("11_oia3p")
stream_4/weight = 1.0
stream_5/stream = ExtResource("12_02hkw")
stream_5/weight = 1.0
stream_6/stream = ExtResource("13_57fyw")
stream_6/weight = 1.0
stream_7/stream = ExtResource("14_dwyr2")
stream_7/weight = 1.0
stream_8/stream = ExtResource("15_uomnd")
stream_8/weight = 1.0
stream_9/stream = ExtResource("16_gcin8")
stream_9/weight = 1.0
stream_10/stream = ExtResource("4_0p24g")
stream_10/weight = 1.0
stream_11/stream = ExtResource("5_ilgp4")
stream_11/weight = 1.0
stream_12/stream = ExtResource("6_1dnwl")
stream_12/weight = 1.0
stream_13/stream = ExtResource("7_nmgmy")
stream_13/weight = 1.0
stream_14/stream = ExtResource("8_iiq54")
stream_14/weight = 1.0

[node name="Main" type="Node2D"]
script = ExtResource("1_35iqu")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(240, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 180.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
offset_right = 240.0
offset_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Timer" type="Timer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Progress" type="ProgressBar" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_q83sa")
theme_override_styles/fill = SubResource("StyleBoxFlat_kfevw")
value = 50.0
show_percentage = false

[node name="RemoveTimer" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Delete this timer"
text = "X"

[node name="HBoxContainer2" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TextLabel" type="RichTextLabel" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 18
text = "Timer A
"
fit_content = true

[node name="TimerText" type="RichTextLabel" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 12
text = "Time remaining:"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start / Pause"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Stop" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="Next" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next"

[node name="AddNewTimer" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Timer"

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_8ncos")

[node name="Window" type="Window" parent="."]
unique_name_in_owner = true
title = "A tiny reward"
initial_position = 1
size = Vector2i(480, 360)
visible = false
unresizable = true
min_size = Vector2i(480, 360)
max_size = Vector2i(480, 360)
keep_title_visible = true

[node name="Control" type="Control" parent="Window"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reward" type="TextureRect" parent="Window/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 180)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 6

[node name="AddTimer" type="Window" parent="."]
unique_name_in_owner = true
title = "Add timer"
initial_position = 2
size = Vector2i(240, 173)
visible = false
unresizable = true

[node name="Control" type="Control" parent="AddTimer"]
layout_mode = 3
anchors_preset = 0

[node name="MarginContainer" type="MarginContainer" parent="AddTimer/Control"]
layout_mode = 1
offset_right = 117.0
offset_bottom = 102.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="AddTimer/Control/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TimerName" type="LineEdit" parent="AddTimer/Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Timer name"
max_length = 64
select_all_on_focus = true

[node name="HBoxContainer" type="HBoxContainer" parent="AddTimer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TimerMinutes" type="LineEdit" parent="AddTimer/Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Minutes"
max_length = 2
select_all_on_focus = true

[node name="TimerSeconds" type="LineEdit" parent="AddTimer/Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Seconds"
max_length = 2
select_all_on_focus = true

[node name="ChooseColor" type="ColorPickerButton" parent="AddTimer/Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Choose color"
alignment = 0
color = Color(1, 0.419608, 0.52549, 1)
edit_alpha = false

[node name="AddTimer" type="Button" parent="AddTimer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add timer"

[connection signal="timeout" from="Control/PanelContainer/MarginContainer/VBoxContainer/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RemoveTimer" to="." method="_on_remove_timer_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/AddNewTimer" to="." method="_on_add_new_timer_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="close_requested" from="AddTimer" to="." method="_on_add_timer_close_requested"]
[connection signal="pressed" from="AddTimer/Control/MarginContainer/VBoxContainer/AddTimer" to="." method="_on_add_timer_pressed"]
